--- a/index.html
+++ b/index.html
@@ -1571,10 +1571,10 @@ bottom: 0 !important;*/
         document.getElementById("chart-fake").getElementsByClassName("chart-fake-value")[0].innerText = "";
         if(is_crowd){
           document.getElementById("chart-fake").classList.add("crowd-background");
-          document.getElementById("chart-fake").getElementsByClassName("chart-fake-value")[0].innerText = "Đông";
+          document.getElementById("chart-fake").getElementsByClassName("chart-fake-value")[0].innerText = "ĐÔNG";
         }else{
           document.getElementById("chart-fake").classList.add("little-background");
-          document.getElementById("chart-fake").getElementsByClassName("chart-fake-value")[0].innerText = "Vắng";
+          document.getElementById("chart-fake").getElementsByClassName("chart-fake-value")[0].innerText = "VẮNG";
         }
         document.getElementById("nv-hanh-chinh").innerText = val1;
         document.getElementById("dang-lam").innerText = val2;
